# Hiss

./: .gitignore  LICENSE.md  Makefile  README.md  TODO.md  hiss.cabal  main.hs  main.lhs
Hiss/: Analyze.lhs  Builtins.lhs  Data.lhs  Interpret.lhs  Primops.lhs  Read.lhs  Write.lhs
app/: Main.lhs
scheme/: base.scm  list.scm
scheme/bootstrap/: cxr.scm  env.scm  expand.scm  list.scm  main.scm  syntax.scm  wrap-intrinsics.scm
src/Hiss/: Analyze.lhs  Data.lhs  Interpret.lhs  Primops.lhs  Read.lhs
