name:                hiss
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nilern/Hiss
license:             BSD3
license-file:        LICENSE.md
author:              Pauli Jaakkola
maintainer:          pauli.jaakkola@iki.fi
copyright:           2017 Pauli Jaakkola
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hiss.Data
                     , Hiss.Read
                     , Hiss.Analyze
                     , Hiss.Interpret
  other-modules:       Hiss.Primops
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim >= 0.5
                     , containers >= 0.5
                     , hashtables >= 1.0
                     , extensible-effects >= 1.11
                     , parsec >= 3.0
  default-language:    Haskell2010

executable hiss-exe
  hs-source-dirs:      app
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hiss
                     , extensible-effects >= 1.11
                     , parsec >= 3.0
  default-language:    Haskell2010

-- test-suite hiss-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hiss
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nilern/Hiss
